# Course_work_SpaWeb

./: .env.sample  README.md  docker-compose.yaml  habits.json  pyproject.toml  users.json
config/: settings.py  urls.py
habits/: admin.py  models.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habits_options_rename_reward_habits_reward_and_more.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
