[tool.poetry]
name = "spaweb"
version = "0.1.0"
description = ""
authors = ["Aleksandr <zemacohoznik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
black = "^24.10.0"
celery = "^5.4.0"
psycopg2-binary = "^2.9.10"
django-celery-beat = "^2.7.0"
drf-yasg = "^1.21.8"
django-filter = "^24.3"
pillow = "^11.0.0"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
coverage = "^7.6.8"
django-cors-headers = "^4.6.0"
redis = "^5.2.0"
flake8 = "^7.1.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
